@@ -4,7 +4,7 @@ CCFLAGS=-Wall -O2 -Werror -g
 INCLUDE=`pkg-config --cflags cairo` `pkg-config --cflags gtk+-3.0` \
         -iquotecontainer/ -iquoteloader/ -iquote./ -iquotescript/ -iquotegui/
 LIB=`pkg-config --libs gtk+-3.0 cairo` -ludis86 -lm -lfontconfig -lpthread \
-	-ljansson -llua
+	-ljansson -lluajit-5.1
 
 all : $(OBJS)
 	make -C container
