@@ -21,8 +21,8 @@ struct _function * function_create (uint64_t address)
     function->crash_and_burn = -1;
     function->address        = address;
     function->flags          = 0;
-    function->addr.low       = 0;
-    function->addr.high      = 0;
+    function->bounds.lower   = 0;
+    function->bounds.upper   = 0;
     return function;
 }
 
@@ -53,11 +53,11 @@ json_t * function_serialize (struct _function * function)
 {
     json_t * json = json_object();
 
-    json_object_set(json, "ot",        json_integer(SERIALIZE_FUNCTION));
-    json_object_set(json, "address",   json_uint64_t(function->address));
-    json_object_set(json, "flags",     json_integer(function->flags));
-    json_object_set(json, "addr_low",  json_uint64_t(function->addr.low));
-    json_object_set(json, "addr_high", json_uint64_t(function->addr.high));
+    json_object_set(json, "ot",          json_integer(SERIALIZE_FUNCTION));
+    json_object_set(json, "address",     json_uint64_t(function->address));
+    json_object_set(json, "flags",       json_integer(function->flags));
+    json_object_set(json, "lower_bound", json_uint64_t(function->bounds.lower));
+    json_object_set(json, "upper_bound", json_uint64_t(function->bounds.upper));
 
     return json;
 }
@@ -65,23 +65,23 @@ json_t * function_serialize (struct _function * function)
 
 struct _function * function_deserialize (json_t * json)
 {
-    json_t * address   = json_object_get(json, "address");
-    json_t * flags     = json_object_get(json, "flags");
-    json_t * addr_low  = json_object_get(json, "addr_low");
-    json_t * addr_high = json_object_get(json, "addr_high");
+    json_t * address     = json_object_get(json, "address");
+    json_t * flags       = json_object_get(json, "flags");
+    json_t * lower_bound = json_object_get(json, "lower_bound");
+    json_t * upper_bound = json_object_get(json, "upper_bound");
 
     if (    (! json_is_uint64_t(address))
          || (! json_is_integer(flags))
-         || (! json_is_integer(addr_low))
-         || (! json_is_integer(addr_high))) {
+         || (! json_is_integer(lower_bound))
+         || (! json_is_integer(upper_bound))) {
         serialize_error = SERIALIZE_FUNCTION;
         return NULL;
     }
 
     struct _function * function = function_create(json_uint64_t_value(address));
-    function->flags     = json_integer_value(flags);
-    function->addr.low  = json_uint64_t_value(addr_low);
-    function->addr.high = json_uint64_t_value(addr_high);
+    function->flags             = json_integer_value(flags);
+    function->bounds.lower      = json_uint64_t_value(lower_bound);
+    function->bounds.upper      = json_uint64_t_value(upper_bound);
 
     return function;
 }
